# langsmith-samples

./: LICENSE  README.md
financial-services/: README.md  (+2 more)
financial-services/fraud-detection-agent/: .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt  run_demo.py
financial-services/fraud-detection-agent/evaluation/: run_evals.py
financial-services/fraud-detection-agent/evaluation/datasets/: adversarial.json  fraud_detection.json  investigation_logic.json  sar_quality.json
financial-services/fraud-detection-agent/evaluation/evaluators/: __init__.py  detection_evaluator.py  grounding_evaluator.py  reasoning_evaluator.py  sar_evaluator.py
financial-services/fraud-detection-agent/sample_data/: README.md  customers.json  entity_graph.json  input_events.json  sanctions_watchlist.json  transaction_history.json
financial-services/fraud-detection-agent/sample_data/scenarios/: input_events_crypto_layering.json  input_events_low_risk.json  input_events_sanctions_exposure.json  input_events_structuring_network.json
financial-services/fraud-detection-agent/src/: __init__.py  chains.py  config.py  deepagents_adapter.py  graph.py  state.py
financial-services/fraud-detection-agent/src/agents/: __init__.py  compliance.py  human_escalation.py  investigation.py  risk_enrichment.py  transaction_monitor.py
financial-services/fraud-detection-agent/src/models/: __init__.py  pattern_detector.py  risk_scorer.py
financial-services/fraud-detection-agent/src/prompts/: compliance.py  enrichment.py  escalation.py  investigation.py  monitor.py
(+56 files in other folders)
